[package]
name = "smmstools"
authors = ["萌面喵喵侠<534619360@qq.com"]
homepage = "https://lolico.me"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "smmstools"
path = "src/bin/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
mime_guess = { version = "2" }
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.40", features = ["test-util"] }

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*